force-app/main/default/objects/sf_devops__Async_Operation_Result__c/fields/sf_devops__Dependent_Records__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Dependent_Records__c</fullName>
    <description>On transition to Completed, attempt to update the records represented as JSON in this field before the transition. If any of those updates fails, set the Async_Operation_Result&apos;s Status field to Error.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Dependent Records</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>