force-app/main/default/objects/sf_devops__Async_Operation_Result__c/fields/sf_devops__Error_Details__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Error_Details__c</fullName>
    <description>If the operation is in the Error status, then this is the detailed error message.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Error Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>