force-app/main/default/objects/sf_devops__Async_Operation_Result__c/fields/sf_devops__Log_Id__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Log_Id__c</fullName>
    <description>Global logging ID to be used cross platform.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Log Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>