force-app/main/default/objects/sf_devops__Async_Operation_Result__c/fields/sf_devops__Operation__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Operation__c</fullName>
    <description>The operation (commit, promote, etc.) this AOR is monitoring.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Operation</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>